Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108645

Focus not updated immediately and lost key press event

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.6.0
    • 6.4.1
    • Wayland Compositor
    • None
    • Linux/Wayland
    • 6a17d561a (dev)

      Start the attached compositor and clients (potentially with the start.sh script). It is possible to switch keyboard focus between the two clients by pressing left or right key. There are two problems right after the start and after switching the focus:

      1. The focus is not immediately set or switched, so the user might not know where the input goes to (blinking input cursor is on the wrong client). Only after a key press the focus is updated.
      2. The first key press event is not processed by the client.

      Problem 2 could be solved in the Qt client (QPA) by having the event loop run (to set the focus) before injecting the key press event. However, both problems can only be solved on the compositor side by updating the client focus immediately.

        For Gerrit Dashboard: QTBUG-108645
        # Subject Branch Project Status CR V

            qt.team.graphics.and.multimedia Qt Graphics Team
            bweimer Bernd Weimer
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes