Forward active focus to clients immediately

The acitve focus has only been set in clients when a key was pressed.
This caused Qt clients to miss the pressed key event.

Fixes: QTBUG-108645
Change-Id: Ie277d64e4e707533d84179c01a69a745cb4da950
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>